@@ -24,14 +24,8 @@
     <parent>
         <groupId>org.apache.cloudstack</groupId>
         <artifactId>cloudstack</artifactId>
-        <version>4.20.0.0-SNAPSHOT</version>
+        <version>4.21.0.0-SNAPSHOT</version>
     </parent>
-    <repositories>
-        <repository>
-            <id>juniper-tungsten-api</id>
-            <url>https://github.com/radu-todirica/tungsten-api/raw/master</url>
-        </repository>
-    </repositories>
 
     <dependencies>
         <dependency>
@@ -102,6 +96,11 @@
             <version>${cs.commons-math3.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.github.spullara.mustache.java</groupId>
+            <artifactId>compiler</artifactId>
+            <version>${cs.mustache.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.cloudstack</groupId>
             <artifactId>cloud-utils</artifactId>
             <version>${project.version}</version>
@@ -166,6 +165,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.cloudstack</groupId>
+            <artifactId>cloud-framework-db</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cloudstack</groupId>
             <artifactId>cloud-engine-storage-configdrive</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -186,11 +190,6 @@
             <groupId>com.codahale.metrics</groupId>
             <artifactId>metrics-jvm</artifactId>
             <version>3.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>net.juniper.tungsten</groupId>
-            <artifactId>juniper-tungsten-api</artifactId>
-            <version>2.0</version>
         </dependency>
     </dependencies>
     <build>
@@ -218,7 +217,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>@{argLine} -Xmx2048m -XX:MaxPermSize=512m -Djava.security.egd=file:/dev/./urandom</argLine>
+                    <argLine>@{argLine} -Xmx2048m -XX:MaxMetaspaceSize=512m -Djava.security.egd=file:/dev/./urandom</argLine>
                     <excludes>
                         <exclude>%regex[.*[0-9]*To[0-9]*.*Test.*]</exclude>
                         <exclude>com/cloud/upgrade/AdvanceZone223To224UpgradeTest</exclude>
